--- a/MyStoreProject/pom.xml
+++ b/MyStoreProject/pom.xml
@@ -25,8 +25,8 @@
 					<version>3.0.0-M7</version>
 					<configuration>
 						<testFailureIgnore>true</testFailureIgnore>
-						<suiteXmlFiles>
-							<suiteXmlfile>${xmlFiles}</suiteXmlfile>
+							<suiteXmlFiles>
+							<suiteXmlfile>testng.xml</suiteXmlfile>
 						</suiteXmlFiles>
 					</configuration>
 				</plugin>
